# Django_project

skate_shop/: manage.py  pyproject.toml
skate_shop/mysite/: db.sqlite3
skate_shop/mysite/loja/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
skate_shop/mysite/loja/migrations/: 0001_initial.py  0002_remove_product_description_cart_cartitem_and_more.py
skate_shop/mysite/loja/templates/loja/: base.html  cart.html  lista_produtos.html  login.html  product_detail.html  signup.html
skate_shop/mysite/loja/templatetags/: custom_filters.py
skate_shop/mysite/mysite/: asgi.py  settings.py  urls.py
