[tool.poetry]
name = "skate-shop"
version = "0.1.0"
description = "A simple skate shop Django project"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1"
Pillow = "^9.2.0"
psycopg2-binary = "^2.9.9"
django-crispy-forms = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# No need for [tool.poetry.package] or [tool.poetry.packages]
